-Good winning message displayed to user
-board is hidden until user clicks start game
-buttons for both x and o to sign in and change password
-ToDo: change authentication to store x and o tokens
-toDo: store games in api
-toDo: hide & show buttons depending on state

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -19,6 +19,7 @@
   background-color: $hero-text-color;
   border-color: $game-board-border;
   border-width: thick;
+  visibility: hidden;
 }
 
 .navbar {
@@ -29,6 +30,12 @@
 footer {
   background-color: $game-board-border;
   padding: 20px;
+  text-align: center;
+}
+
+nav {
+  align-items: center;
+  text-align: center;
 }
 
 .main-content {
