-Player x authentication enhanced
-Player can sign in as player x
-when signed in sign in button is hidden
-when signed in log out and change password become visible
-ToDo: repeat for player O

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -55,3 +55,19 @@ nav {
   align-items: center;
   text-align: center;
 }
+
+.player-x-change-password {
+  visibility: hidden;
+}
+
+.player-x-log-out {
+  visibility: hidden;
+}
+
+.player-o-change-password {
+  visibility: hidden;
+}
+
+.player-o-log-out {
+  visibility: hidden;
+}
