-Improved error handling visual
-modal pops up displaying error to user when something goes wrong
-signup button diappears when signed in

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -71,3 +71,11 @@ nav {
 .player-o-log-out {
   visibility: hidden;
 }
+
+// .player-o-sign-up {
+//   visibility: hidden;
+// }
+//
+// .player-x-sign-up {
+//   visibility: hidden;
+// }
